# wolc

./: .gitignore  .prettierrc  PRIVACY_POLICY.md  package.json  pnpm-lock.yaml
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: devicemanager.rs  lib.rs  main.rs  wol.rs
src/components/: theme-provider.tsx
src/i18n/: en.json  i18n.ts  ko.json
